--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "jslint": "^0.11.0"
   },
   "devDependencies": {
+    "body-parser": "1.18.2",
     "csvtojson": "1.1.9",
+    "morgan": "1.9.0",
     "node-dev": "3.1.3"
   }
 }
