--- a/express-middleware/package.json
+++ b/express-middleware/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node-dev app.js"
+    "start": "node-dev rest-api.js"
   },
   "keywords": [],
   "author": "",
